Merge origin/master
Conflicts:
	nbproject/project.properties